--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "color-alpha": "^2.0.0",
     "gh-pages": "^6.1.1",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
